--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==5.0.1
 django-bootstrap4==24.1
 django-taggit==5.0.1
 mysqlclient==2.2.4
+pillow==10.2.0
 psycopg2==2.9.9
 python-dotenv==1.0.1
 soupsieve==2.5
