--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,32 @@
 asgiref==3.7.2
 autocorrect==2.6.1
 beautifulsoup4==4.12.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.5
+defusedxml==0.8.0rc2
 Django==5.0.1
 django-bootstrap4==24.1
+django-extensions==3.2.3
 django-taggit==5.0.1
+idna==3.6
+MarkupSafe==2.1.5
 mysqlclient==2.2.4
+oauthlib==3.2.2
 pillow==10.2.0
 psycopg2==2.9.9
+pycparser==2.22
+PyJWT==2.8.0
+pyOpenSSL==24.1.0
 python-dotenv==1.0.1
+python3-openid==3.2.0
+requests==2.31.0
+requests-oauthlib==2.0.0
+social-auth-app-django==5.4.0
+social-auth-core==4.5.3
 soupsieve==2.5
 sqlparse==0.4.4
 tzdata==2023.4
+urllib3==2.2.1
+Werkzeug==3.0.2
