added image thumbnails to provide better performance

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==5.0.1
 django-bootstrap4==24.1
 django-extensions==3.2.3
 django-taggit==5.0.1
+easy-thumbnails==2.8.5
 idna==3.6
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
