--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==42.0.5
 defusedxml==0.8.0rc2
 Django==5.0.1
 django-bootstrap4==24.1
+django-debug-toolbar==4.3.0
 django-extensions==3.2.3
 django-taggit==5.0.1
 easy-thumbnails==2.8.5
@@ -22,6 +23,7 @@ PyJWT==2.8.0
 pyOpenSSL==24.1.0
 python-dotenv==1.0.1
 python3-openid==3.2.0
+redis==5.0.3
 requests==2.31.0
 requests-oauthlib==2.0.0
 social-auth-app-django==5.4.0
